--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.datasource.url=jdbc:postgresql://apprhh.cj8a2wciwdmd.us-east-2.rds.amazonaws.com:5432/apprh
-spring.datasource.username=postgres
-spring.datasource.password=10101010
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:h2:mem:banco
+spring.datasource.driverClassName=org.h2.Driver
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.username=admin
+spring.datasource.password=123
+spring.h2.console.path=/h2
+spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=update
 
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
